@@ -1,0 +1,92 @@
+{
+  "check_exit_status": "yes",
+  "customize": {
+    "install_env": {
+      "PIP_INSTALL_OPTIONS": "--ignore-installed",
+      "PYTHON_PACKAGE_NAME": "tflite"
+    }
+  },
+  "deps": {
+    "python": {
+      "add_to_path": "yes",
+      "local": "yes",
+      "name": "Python interpreter",
+      "sort": 10,
+      "tags": "compiler,python"
+    }
+  },
+  "end_full_path_universal": "build$#sep#$tflite$#sep#$__init__.py",
+  "only_for_host_os_tags": [],
+  "only_for_target_os_tags": [
+    "windows",
+    "linux"
+  ],
+  "process_script": "install",
+  "soft_uoa": "c005413ea02e5a10",
+  "soft_uoa#": "lib.python.tflite",
+  "suggested_path": "lib-python-tflite",
+  "tags": [
+    "lib",
+    "python-package",
+    "tflite",
+    "tflite-cpu",
+    "cpu"
+  ],
+  "use_scripts_from_another_entry": {
+    "data_uoa": "e8363e22e84dedba",
+    "data_uoa#": "install-python-package",
+    "module_uoa": "script"
+  },
+  "variations": {
+    "2.0.1": {
+      "extra_customize": {
+        "version": "2.0.1"
+      },
+      "extra_env": {
+        "PACKAGE_VERSION": "2.0.1"
+      },
+      "on_by_default": "no"
+    },
+    "2.1.0": {
+      "extra_customize": {
+        "version": "2.1.0"
+      },
+      "extra_env": {
+        "PACKAGE_VERSION": "2.1.0"
+      },
+      "on_by_default": "no"
+    },
+    "2.2.0": {
+      "extra_customize": {
+        "version": "2.2.0"
+      },
+      "extra_env": {
+        "PACKAGE_VERSION": "2.2.0"
+      },
+      "on_by_default": "no"
+    },
+    "2.3.0": {
+      "extra_customize": {
+        "version": "2.3.0"
+      },
+      "extra_env": {
+        "PACKAGE_VERSION": "2.3.0"
+      },
+      "on_by_default": "no"
+    },
+    "2.4.0": {
+      "extra_customize": {
+        "version": "2.4.0"
+      },
+      "extra_env": {
+        "PACKAGE_VERSION": "2.4.0"
+      },
+      "on_by_default": "no"
+    },
+    "latest": {
+      "extra_customize": {},
+      "extra_env": {},
+      "on_by_default": "yes"
+    }
+  }
+}
